fixed misalignment

--- a/css/master.css
+++ b/css/master.css
@@ -171,7 +171,6 @@ body {
 
 	.header {
 		width: 100%;
-		height: 70px;
 		font-family: 'Lato', serif;
 	    font-size: 13px;/*make vh*/
 	}
@@ -243,6 +242,7 @@ body {
 	    font-size: 12px;/*make vh*/
 	    color: rgba(0, 0, 0, 0.8);
 	}
+
 
 
 }
