--- a/css/projectsmaster.css
+++ b/css/projectsmaster.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
 }
 
-.mobileversion {
+.mobileversion2 {
 	color: white;
 }
 
@@ -21,7 +21,7 @@ body {
 	    
 	}
 
-	.mobileversion {
+	.mobileversion2 {
 		display: none;
 	}
 
